--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>你好</title>
-</head>
-<body>
-	<div>欢迎来到我的世界</div>
-	{%for post in posts%}
+{%extends 'blog/base.html'%}
+{%block content%}
+{%for post in posts%}
 	<div>
 		<p>published:{{post.published_date}}</p>
 		<h1><a href="">{{post.title}}</a></h1>
 		<p>{{post.text|linebreaks}}</p>
 	</div>
-	{%endfor%}
-</body>
-</html>
+{%endfor%}
+{%endblock content%}
